--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </ol>
         </section>
     </main>
-    <footer style="background-color:burlywood;" align="center">
+    <footer style="background-color:aquamarine;" align="center">
         <p>Todos los derechos reservados a Mariel Cecilia Romeo</p>
     </footer>
 
