Lemon-pie-Mariel-Romeo-actualizada

--- a/index.html
+++ b/index.html
@@ -4,30 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <title> El Clasico Lemon Pie </title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
+    <link href = "css/style.css" rel="stylesheet">;
 </head>
 
 <body>
+    <nav>
+        <a href="index.html"><img src="img/logo-front.png"></a>
+        <ul type="none" class=eliminarSubrayado >
+            <li><a class="vinculos" href="https://www.recetasderechupete.com/todas/recetas/postres-dulces/" target="_blank"> Recetas
+                    Dulces</a></li>
+            <li><a class="vinculos" href="https://es.tastemade.com/recetas/Recetas-Saladas" target="_blank">Recetas Saladas</a></li>
+            <li><a class="vinculos" href="contacto.html">Contacto</a></li>
+        </ul>
+    </nav>
     <header>
-        <nav>
-            <a href="index.html"><img src="img/logo-front.png"></a>
-            <ul>
-                <li><a href="https://www.recetasderechupete.com/todas/recetas/postres-dulces/" target="_blank"> Recetas
-                        Dulces</a></li>
-                <li><a href="https://es.tastemade.com/recetas/Recetas-Saladas" target="_blank">Recetas Saladas</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-        <img src="img/lemon-pie.png">
         <h1>El clásico Lemon Pie</h1>
-        <p>
+         <p>
             Es el preferido de los que les gusta lo dulce pero no lo empalagoso. <strong>El lemon pie es una tarta</strong>, es decir,
             una base de masa y un relleno. Como su nombre lo indica, está hecha con jugo de limón, azúcar y huevos. Todo
             eso mezclado hace el famoso <em>custard</em>, el relleno cremoso amarillo que es tan típico del lemon pie.
-        </p>
+         </p>
     </header>
     <main>
         <section>
-            <h2> Ingredientes para la masa</h2>
+            <h2><i class="fas fa-shopping-basket"></i> Ingredientes</h2>
+            <h3>Para la masa</h3>
             <ul type="none">
                 <li>200g. gramos de harina 0000</li>
                 <li>50g. de azúcar</li>
@@ -36,7 +38,7 @@
             </ul>
         </section>
         <section>
-            <h2>Ingredientes para la crema</h2>
+            <h3>Para la crema</h3>
             <ul type="none">
                 <li>150 cc. de jugo de limón</li>
                 <li>1 cucharada de ralladura de limón</li>
@@ -45,14 +47,14 @@
             </ul>
         </section> 
         <section>
-            <h2>Ingredientes para el merengue</h2>
+            <h3>Para el merengue</h3>
             <ul type="none">
                 <li>240g. de azúcar</li>
                 <li>3 claras</li>
             </ul>
         </section>       
         <section>
-            <h2>Instrucciones</h2>
+            <h2><i class="fas fa-list-ol"></i>  Instrucciones</h2>
 
             <ol>
                 <li>Procesar o mezclar ligeramente la harina, el azúcar y la manteca fría curtada en cubitos, hasta formar
@@ -64,7 +66,7 @@
                 <li>Mezclar la leche condensada con 4 yemas, 150cc de jugo de limón e integrar la ralladura. Unir bien y
                     verter sobre la masa precocida. Cocinar en horno moderado durante 15 minutos.</li>
                 <li>Colocar el azúcar en una cacerolita y cubrir con apenas con agua. Cocinar hasta obtener la textura de
-                    un merengue italiano.</li>
+                    un <span><a id="merengue" href= "https://www.recetasderechupete.com/como-preparar-merengue-italiano/13496/" target= "_blank">merengue italiano</a></span>.</li>
                 <li>Unos minutos antes del punto del almíbar, comenzar a batir las claras. Cuando empiecen a formar picos,
                     añadir gota a gota el almíbar caliente sin dejar de batir hasta que se enfríe.</li>
                 <li>Decorar con el merengue y gratinar.</li>
